<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_add_goal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewAddGoalsTitle">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_round"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="0dp"
            android:paddingRight="20dp"
            android:paddingBottom="150dp">

            <TextView
                android:id="@+id/textViewAddGoalsMess1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_round"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingTop="5dp"
                android:paddingRight="30dp"
                android:paddingBottom="5dp"
                android:text="@string/modify_goals_title"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/newGoalName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_round_flat"
                android:drawablePadding="10dp"
                android:elevation="6dp"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/add_goals_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:shadowDx="20"
                android:shadowDy="20"
                android:shadowRadius="20"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="18sp"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/textViewAddGoalsMessQDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_round"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingTop="5dp"
                android:paddingRight="30dp"
                android:paddingBottom="5dp"
                android:text="@string/modify_goals_desc"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextAddGoalsQDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_round_flat"
                android:drawablePadding="10dp"
                android:elevation="6dp"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/add_goals_add_desc"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:shadowDx="20"
                android:shadowDy="20"
                android:shadowRadius="20"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="18sp"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/textViewAddGoalsMessQTitle4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_round"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingTop="5dp"
                android:paddingRight="30dp"
                android:paddingBottom="5dp"
                android:text="@string/add_goals_add_goal"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextAddGoalsQTarget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_round_flat"
                android:drawablePadding="10dp"
                android:elevation="6dp"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/add_goals_add_goal"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:shadowDx="20"
                android:shadowDy="20"
                android:shadowRadius="20"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="18sp"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/textViewAddGoalsMessQTitle2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_round"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingTop="5dp"
                android:paddingRight="30dp"
                android:paddingBottom="5dp"
                android:text="@string/modify_goals_days"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextAddGoalsQDays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_round_flat"
                android:drawablePadding="10dp"
                android:elevation="6dp"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/add_goals_add_days"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:shadowDx="20"
                android:shadowDy="20"
                android:shadowRadius="20"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="18sp"
                tools:targetApi="lollipop" />

            <TextView
                android:id="@+id/textViewAddGoalsMessQTitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_round"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingTop="5dp"
                android:paddingRight="30dp"
                android:paddingBottom="5dp"
                android:text="@string/modify_goals_days"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextAddGoalsQTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_round_flat"
                android:drawablePadding="10dp"
                android:elevation="6dp"
                android:ems="10"
                android:fontFamily="sans-serif-light"
                android:hint="@string/add_goals_add_days"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="10dp"
                android:shadowDx="20"
                android:shadowDy="20"
                android:shadowRadius="20"
                android:textColor="@color/colorPrimaryDark"
                android:textColorHint="@color/colorAccent"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="18sp"
                tools:targetApi="lollipop" />

            <LinearLayout
                android:id="@+id/LinearLayoutQ"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewAddGoalsMessQTitle5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/edit_round"
                    android:fontFamily="@font/roboto_light"
                    android:gravity="center"
                    android:paddingLeft="30dp"
                    android:paddingTop="5dp"
                    android:paddingRight="30dp"
                    android:paddingBottom="5dp"
                    android:text="@string/modify_goals_step"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextAddGoalsQTitle4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/edit_round_flat"
                    android:drawablePadding="10dp"
                    android:elevation="6dp"
                    android:ems="10"
                    android:fontFamily="sans-serif-light"
                    android:hint="@string/add_goals_add_step"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="10dp"
                    android:shadowDx="20"
                    android:shadowDy="20"
                    android:shadowRadius="20"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorAccent"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:textSize="18sp"
                    tools:targetApi="lollipop" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonAddGoalsSubmit"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient"
                android:text="@string/add_goals_submit"
                android:textColor="@color/colorPrimary"
                app:backgroundTint="@color/black"
                app:backgroundTintMode="add" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textViewAddGoalsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/title"
        android:fontFamily="sans-serif-light"
        android:paddingLeft="20dp"
        android:paddingTop="60dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"
        android:text="@string/modify_goals_goal"
        android:textColor="@color/colorPrimary"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>