<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_marginBottom="10dp"
android:id="@+id/fragment_statistic"
android:background="@drawable/background">

<ScrollView
    android:id="@+id/scrollViewStatistic"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textViewAddGoalsTitle"
    app:layout_constraintVertical_bias="0.0">

    <LinearLayout
        android:id="@+id/linearLayoutStatistic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_round"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="0dp"
        android:paddingRight="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/statisticSubheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_round"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingTop="5dp"
            android:paddingRight="30dp"
            android:paddingBottom="5dp"
            android:text="@string/statistic_title"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewStatisticUsernameTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_round"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingTop="5dp"
            android:paddingRight="30dp"
            android:paddingBottom="5dp"
            android:text="@string/statistic_username_title"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewStatisticUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_round_flat"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingTop="5dp"
            android:paddingRight="30dp"
            android:paddingBottom="5dp"
            android:text=""
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewStatisticUserEmailTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_round"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingTop="5dp"
            android:paddingRight="30dp"
            android:paddingBottom="5dp"
            android:text="@string/statistic_email_title"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewStatisticEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_round_flat"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingTop="5dp"
            android:paddingRight="30dp"
            android:paddingBottom="5dp"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewStatisticUserPointsTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edit_round"
            android:fontFamily="@font/roboto_light"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingTop="5dp"
            android:paddingRight="30dp"
            android:paddingBottom="5dp"
            android:text="@string/statistic_points_title"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewStatisticPoints"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/edit_round"
                android:fontFamily="@font/roboto_light"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingTop="5dp"
                android:paddingRight="30dp"
                android:paddingBottom="5dp"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />
    </LinearLayout>
</ScrollView>

<TextView
    android:id="@+id/textViewAddGoalsTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/title"
    android:fontFamily="sans-serif-light"
    android:paddingLeft="20dp"
    android:paddingTop="60dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp"
    android:text="@string/statistic_header"
    android:textColor="@color/colorPrimary"
    android:textSize="32sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>