<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <com.savvi.rangedatepicker.CalendarPickerView
            android:id="@+id/calendar_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tsquare_dividerColor="@color/addGoals"
            app:tsquare_orientation_horizontal="false" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textViewCalendarTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edit_round_flat"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/calendar_use_type"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/get_selected_dates" />

            <Button
                android:id="@+id/get_selected_dates"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/gradient"
                android:text="@string/calendar_clickChange"
                app:backgroundTint="@color/black"
                app:backgroundTintMode="add"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_selected_dates"
        tools:ignore="NotSibling">

        <Button
            android:id="@+id/buttonCalendarPrev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:width="10dp"
            android:background="@drawable/gradient"
            android:elevation="20dp"
            android:maxWidth="0dip"
            android:minWidth="0dip"
            android:text="@string/calendar_prev"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:backgroundTint="@color/black"
            app:backgroundTintMode="add"
            app:icon="@drawable/ic_baseline_arrow_back_ios_24"
            app:iconPadding="0dp"
            app:iconSize="30dp" />

        <Button
            android:id="@+id/buttonCalendarNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:width="10dp"
            android:background="@drawable/gradient"
            android:elevation="20dp"
            android:maxWidth="0dip"
            android:minWidth="0dip"
            android:text="@string/calendar_next"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            app:backgroundTint="@color/black"
            app:backgroundTintMode="add"
            app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
            app:iconGravity="end"
            app:iconPadding="0dp"
            app:iconSize="30dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

